--- a/3 lesson/index.html
+++ b/3 lesson/index.html
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="widht=device-widht, initial scale=1.0">
+        <title>Document</title>
     </head>
     <body>
+        <script src="./"></script>
+    </body>
+</html>
+
