--- a/lesson11/colorButton/index.html
+++ b/lesson11/colorButton/index.html
@@ -3,17 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="widht=device-widht, initial scale=1.0">
-        <title></title>
-        <style>
-            #text{
-                color: black;
-            }
-        </style>
+        <title>Кольорова кнопка</title>
     </head>
 
     <body>
-        <p id="text">Цей текст змінює колір </p>
-        <button onclick="changeColor()">Зелений</button>
+        <h1>Різнокольоровий текст</h1>
+        <p>Цей текст змінює колір </p>
+        <button id="color">зелений!!!!</button>
 
         <script src="./changeColorButton.js"></script>
     </body>
