--- a/lesson11/randomImages/img.html
+++ b/lesson11/randomImages/img.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="widht=device-widht, initial scale=1.0">
-        <title>Рандомні зображення</title>
-    </head>
-    <body>
-      <h1>Випадкове зображення</h1>
-      <img id="imageRandom" src="" alt="Випадкове зображення" style="max-width: 500px;"/>
-
-      <script src="./randomim.js"></script>
-    </body>
-</html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Рандомні зображення</title>
+</head>
+<body>
+    <h1>Випадкове зображення</h1>
+    <img id="imageRandom" src="" alt="Випадкове зображення" style="max-width: 1000px;"/>
+    <script src="./js/randomim.js"></script> <!-- Приклад шляху до js файлу -->
+</body>
