--- a/lesson12/GoToPage/index.html
+++ b/lesson12/GoToPage/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Перенаправлення за посиланням</h1>
         <button id="setLink">Ввести посилання</button>
-        <button id="redirectButtton">Перейти за посиланням</button>
+        <button id="redirectButton">Перейти за посиланням</button>
 
         <script src="redirectPage.js"></script>
     </body>
